--- a/_config.yml
+++ b/_config.yml
@@ -40,12 +40,7 @@ collections:
     output: true
     permalink: /projects/:name/
     order:
-      - shortProject.md
-      - longerProjectTitle.md
-      - redirect.md
-      - project4.md
-      - project5.md
-      - project6.md
+      - lighthouse.md
 
 sass:
   sass_dir: /assets/css/_sass
