Add How Many Layers tool

--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,7 @@ collections:
     order:
       - printnode-printers-explorer.md
       - bitbucket-pr-reviewer.md
+      - how-many-layers.md
 
 sass:
   sass_dir: /assets/css/_sass
