--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ collections:
     output: true
     permalink: /projects/:name/
     order:
+      - ilm-abroad.md
       - lighthouse.md
       - smart-glove.md
 
